--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -134,33 +134,67 @@ için hazırlanan html düzeninde kullanılır.
       </div>
     </div>
   </div>
-</div>
 
-
-<div data-sekme="sağda" data-gnl="1 1p">
-  <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
-  <label for="im1s">Birinci</label>
+  <input id="im5" type="radio" name="sekme">
+  <label for="im5">altta ortada</label>
   <div>
-    Birinci sağda sekme içeriği
+    <div data-sekme="altta ortada" data-gnl="1 1p">
+      <input id="im15" type="radio" name="sekme5" checked="checked">
+      <label for="im15">Birinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+
+      <input id="im25" type="radio" name="sekme5">
+      <label for="im25">İkinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+
+      <input id="im35" type="radio" name="sekme5">
+      <label for="im35">Üçüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum.
+      </div>
+
+      <input id="im45" type="radio" name="sekme5">
+      <label for="im45">Dördüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse platea dictumst. Sit amet aliquam id diam maecenas ultricies mi eget. Libero nunc consequat interdum varius.
+      </div>
+    </div>
   </div>
 
-  <input id="im2s" type="radio" name="sekme-sağda">
-  <label for="im2s">İkinci</label>
+  <input id="im6" type="radio" name="sekme">
+  <label for="im6">altta sağda</label>
   <div>
-    İkinci sağda sekme içeriği
+    <div data-sekme="altta sağda" data-gnl="1 1p">
+      <input id="im16" type="radio" name="sekme6" checked="checked">
+      <label for="im16">Birinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+
+      <input id="im26" type="radio" name="sekme6">
+      <label for="im26">İkinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+
+      <input id="im36" type="radio" name="sekme6">
+      <label for="im36">Üçüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum.
+      </div>
+
+      <input id="im46" type="radio" name="sekme6">
+      <label for="im46">Dördüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse platea dictumst. Sit amet aliquam id diam maecenas ultricies mi eget. Libero nunc consequat interdum varius.
+      </div>
+    </div>
   </div>
 
-  <input id="im3s" type="radio" name="sekme-sağda">
-  <label for="im3s">Üçüncü</label>
-  <div>
-    Üçüncü sağda sekme içeriği
-  </div>
-
-  <input id="im4s" type="radio" name="sekme-sağda">
-  <label for="im4s">Dördüncü</label>
-  <div>
-    Dördüncü sağda sekme içeriği
-  </div>
 </div>
 
 <p></p>
