--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -195,6 +195,35 @@ için hazırlanan html düzeninde kullanılır.
     </div>
   </div>
 
+  <input id="im7" type="radio" name="sekme">
+  <label for="im7">altta gergin</label>
+  <div>
+    <div data-sekme="altta gergin" data-gnl="1 1p">
+      <input id="im17" type="radio" name="sekme7" checked="checked">
+      <label for="im17">Birinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+
+      <input id="im27" type="radio" name="sekme7">
+      <label for="im27">İkinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+
+      <input id="im37" type="radio" name="sekme7">
+      <label for="im37">Üçüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum.
+      </div>
+
+      <input id="im47" type="radio" name="sekme7">
+      <label for="im47">Dördüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse platea dictumst. Sit amet aliquam id diam maecenas ultricies mi eget. Libero nunc consequat interdum varius.
+      </div>
+    </div>
+  </div>
 </div>
 
 <p></p>
