uyumu menü çalışması

--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -2,6 +2,22 @@
 layout: default
 title: Menüler
 ---
+<h1>YENİ YÖNTEMLERLE</h1>
+<label data-menü="" data-kçk="gizle" for="um">MENÜ</label>
+<input id="um" name="uyumlumenu" type="checkbox">
+<ul data-gnl="1 1p" data-kçk="küçükleri-gizle">
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Bir</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">İki</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Üç</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Dört</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Beş</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Altı</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Yedi</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Sekiz</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="#">Dokuz</a></li>
+</ul>
+
+<hr>
     <h1>Menüler</h1>
     <ul>
       <li>Seviye 1.1</li>
