--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -2,23 +2,31 @@
 layout: default
 title: Menüler
 ---
-<h1>YENİ YÖNTEMLERLE</h1>
-<label data-menü="" data-kçk="gizle" for="um">MENÜ</label>
-<input id="um" name="uyumlumenu" type="checkbox">
-<ul data-gnl="1 1p" data-kçk="küçükleri-gizle">
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Bir</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">İki</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Üç</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Dört</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Beş</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Altı</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Yedi</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Sekiz</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="#">Dokuz</a></li>
+<h1>Uyumlu Menü (Responsive Menu)</h1>
+<label data-gnl="1 1p ortada" data-menü="varsayılan" for="menu" data-kçk="gizle">MENÜ</label>
+<input id="menu" type="checkbox" name="menu1">
+<ul data-gnl="1g" data-kçk="küçükleri-gizle">
+  <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü 1</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 2</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 3</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 4</a></li>
+  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 5</a></li>
 </ul>
 
-<hr>
-    <h1>Menüler</h1>
+<pre data-gnl="1 1p"><code class="language-html">
+  &lt;label data-gnl=&quot;1 1p ortada&quot; data-men&uuml;=&quot;varsayılan&quot; for=&quot;menu&quot; data-k&ccedil;k=&quot;gizle&quot;&gt;MEN&Uuml;&lt;/label&gt;
+  &lt;input id=&quot;menu&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
+  &lt;ul data-gnl=&quot;1g&quot; data-k&ccedil;k=&quot;k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
+    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; 1&lt;/a&gt;&lt;/li&gt;
+    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 2&lt;/a&gt;&lt;/li&gt;
+    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 3&lt;/a&gt;&lt;/li&gt;
+    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 4&lt;/a&gt;&lt;/li&gt;
+    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 5&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+</code></pre>
+
+
+<!--    <h1>Menüler</h1>
     <ul>
       <li>Seviye 1.1</li>
       <li>Seviye 1.2
@@ -97,4 +105,4 @@ title: Menüler
       <li><a href="#">Menu 6</a></li>
       <li><a href="#">Contact Us</a></li>
     </ul>
-    </nav>
+  </nav>-->
