--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -5,7 +5,7 @@ title: Menüler
 <h1>Uyumlu Menü (Responsive Menu)</h1>
 <label data-gnl="1 1p ortada" data-menü="varsayılan" for="menu" data-kçk="gizle">MENÜ</label>
 <input id="menu" type="checkbox" name="menu1">
-<ul data-gnl="1g" data-kçk="küçükleri-gizle">
+<ul data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
   <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü 1</a></li>
   <li data-gnl="1 1p" data-kçk="0"><a href="">menü 2</a></li>
   <li data-gnl="1 1p" data-kçk="0"><a href="">menü 3</a></li>
@@ -16,7 +16,7 @@ title: Menüler
 <pre data-gnl="1 1p"><code class="language-html">
   &lt;label data-gnl=&quot;1 1p ortada&quot; data-men&uuml;=&quot;varsayılan&quot; for=&quot;menu&quot; data-k&ccedil;k=&quot;gizle&quot;&gt;MEN&Uuml;&lt;/label&gt;
   &lt;input id=&quot;menu&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
-  &lt;ul data-gnl=&quot;1g&quot; data-k&ccedil;k=&quot;k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
+  &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
     &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; 1&lt;/a&gt;&lt;/li&gt;
     &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 2&lt;/a&gt;&lt;/li&gt;
     &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 3&lt;/a&gt;&lt;/li&gt;
