--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -2,7 +2,7 @@
 layout: default
 title: Deveb Kurulumu
 ---
-<div data-gnl="24">
+<div data-gnl="1 1p">
     <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını doğru şekilde projenize dahil etmek olacak. Deveb'i Türkçe ve İngilizce kullanabildiğiniz için bunlar ayrıştırılmıştır. Aynı anda iki dilde satırlarınızı yazmak istiyorsanız tüm CSS'leri dahil etmeniz gerekecektir.</p>
 
     <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
