--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: home
 title: deveb
 ---
-<div data-gnl="8 8p göbekte" data-ort="8p" class="beri-üst-2">
-  <div data-gnl="8 uzun-ol göbekte" data-ort="4">
+<div data-gnl="8 8p göbekte" data-ort="8 8p" class="beri-üst-2">
+  <div data-gnl="8 8p uzun-ol göbekte" data-ort="4 8p">
     <div data-gnl="1 1p" data-etki="havada">
       <h1 class="metin-deveb beri-2" style="font-size:80pt; margin-bottom:0; justify-content:center; font-family: 'Comfortaa', cursive; color:#eee !important; display:flex;">deveb</h1>
       <p class="metin-gri-3 beri-1" style="font-size:13pt; text-align:center;">
@@ -16,18 +16,18 @@ title: deveb
       </p>
     </div>
   </div>
-  <div data-gnl="8 uzat" data-ort="4">
-    <div data-gnl="6" style="padding-left:2%">
-        <div data-gnl="8" class="beri-alt-1" style="font-size:500%;background-color:#ccc; height:200px;"></div>
-        <div data-gnl="8" class="ap-deveb beri-alt-1" style="height:60px;"></div>
+  <div data-gnl="8 8p uzat" data-ort="4 8p">
+    <div data-gnl="6 8p" style="padding-left:2%">
+        <div data-gnl="8 8p" class="beri-alt-1" style="font-size:500%;background-color:#ccc; height:200px;"></div>
+        <div data-gnl="8 8p" class="ap-deveb beri-alt-1" style="height:60px;"></div>
         <div data-gnl="1 5p" class="ap-deveb beri-alt-1" style="height:80px;"></div>
         <div data-gnl="4 5p uzun-ol">
-          <div data-gnl="5 uzun-ol" class="beri-sol-1 beri-alt-1" style="background-color:#ccc;"></div>
+          <div data-gnl="5 5p uzun-ol" class="beri-sol-1 beri-alt-1" style="background-color:#ccc;"></div>
         </div>
-        <div data-gnl="8" class="ap-deveb" style="height:60px;"></div>
+        <div data-gnl="8 8p" class="ap-deveb" style="height:60px;"></div>
     </div>
-    <div data-gnl="2">
-      <div data-gnl="6 uzun-ol" class="beri-sol-1 ap-deveb"></div>
+    <div data-gnl="2 8p">
+      <div data-gnl="6 8p uzun-ol" class="beri-sol-1 ap-deveb"></div>
     </div>
   </div>
 </div>
