--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -3,29 +3,58 @@ layout: default
 title: Menüler
 ---
 <h1>Uyumlu Menü (Responsive Menu)</h1>
-<label data-gnl="1 1p ortada" data-menü="varsayılan" for="menu" data-kçk="gizle">MENÜ</label>
-<input id="menu" type="checkbox" name="menu1">
-<ul data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
-  <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü 1</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 2</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 3</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 4</a></li>
-  <li data-gnl="1 1p" data-kçk="0"><a href="">menü 5</a></li>
-</ul>
+<div data-gnl="1 1p">
+  <label data-gnl="1 1p ortada" data-menü="varsayılan" for="menu" data-kçk="gizle">MENÜ</label>
+  <input id="menu" type="checkbox" name="menu1">
+  <ul data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
+    <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü 1</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 2</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 3</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 4</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 5</a></li>
+  </ul>
+</div>
 
 <pre data-gnl="1 1p"><code class="language-html">
-  &lt;label data-gnl=&quot;1 1p ortada&quot; data-men&uuml;=&quot;varsayılan&quot; for=&quot;menu&quot; data-k&ccedil;k=&quot;gizle&quot;&gt;MEN&Uuml;&lt;/label&gt;
-  &lt;input id=&quot;menu&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
-  &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
-    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; 1&lt;/a&gt;&lt;/li&gt;
-    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 2&lt;/a&gt;&lt;/li&gt;
-    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 3&lt;/a&gt;&lt;/li&gt;
-    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 4&lt;/a&gt;&lt;/li&gt;
-    &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 5&lt;/a&gt;&lt;/li&gt;
-  &lt;/ul&gt;
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    &lt;label data-gnl=&quot;1 1p ortada&quot; data-men&uuml;=&quot;varsayılan&quot; for=&quot;menu&quot; data-k&ccedil;k=&quot;gizle&quot;&gt;MEN&Uuml;&lt;/label&gt;
+    &lt;input id=&quot;menu&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
+    &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; 1&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 2&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 3&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 4&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 5&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/div&gt;
 </code></pre>
 
 
+<div data-gnl="1 1p">
+  <label data-menü="yukarı varsayılan" data-gnl="1 1p ortada" data-kçk="gizle" for="menu">MENÜ</label>
+  <input id="menu" type="checkbox" name="menu1">
+  <ul data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
+    <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü 1</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 2</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 3</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 4</a></li>
+    <li data-gnl="1 1p" data-kçk="0"><a href="">menü 5</a></li>
+  </ul>
+</div>
+
+<pre data-gnl="1 1p"><code class="language-html">
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;
+    &lt;label data-men&uuml;=&quot;yukarı varsayılan&quot; data-gnl=&quot;1 1p ortada&quot; data-k&ccedil;k=&quot;gizle&quot; for=&quot;menu&quot;&gt;MEN&Uuml;&lt;/label&gt;
+    &lt;input id=&quot;menu&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
+    &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; 1&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 2&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 3&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 4&lt;/a&gt;&lt;/li&gt;
+      &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 5&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/div&gt;
+</code></pre>
 <!--    <h1>Menüler</h1>
     <ul>
       <li>Seviye 1.1</li>
