--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -31,8 +31,8 @@ title: Menüler
 
 
 <div data-gnl="1 1p">
-  <label data-menü="yukarı varsayılan" data-gnl="1 1p ortada" data-kçk="gizle" for="menu">MENÜ</label>
-  <input id="menu" type="checkbox" name="menu1">
+  <label data-menü="yukarı varsayılan" data-gnl="1 1p ortada" data-kçk="gizle" for="menuy">MENÜ</label>
+  <input id="menuy" type="checkbox" name="menu1">
   <ul data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
     <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü 1</a></li>
     <li data-gnl="1 1p" data-kçk="0"><a href="">menü 2</a></li>
