--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -44,8 +44,8 @@ title: Menüler
 
 <pre data-gnl="1 1p"><code class="language-html">
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
-    &lt;label data-men&uuml;=&quot;yukarı varsayılan&quot; data-gnl=&quot;1 1p ortada&quot; data-k&ccedil;k=&quot;gizle&quot; for=&quot;menu&quot;&gt;MEN&Uuml;&lt;/label&gt;
-    &lt;input id=&quot;menu&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
+    &lt;label data-men&uuml;=&quot;yukarı varsayılan&quot; data-gnl=&quot;1 1p ortada&quot; data-k&ccedil;k=&quot;gizle&quot; for=&quot;menuy&quot;&gt;MEN&Uuml;&lt;/label&gt;
+    &lt;input id=&quot;menuy&quot; type=&quot;checkbox&quot; name=&quot;menu1&quot;&gt;
     &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
       &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; 1&lt;/a&gt;&lt;/li&gt;
       &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; 2&lt;/a&gt;&lt;/li&gt;
