--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -16,7 +16,7 @@ title: Menüler
 </div>
 
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-men&uuml;=&quot;varsayılan yukarı&quot; data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;
+&lt;div data-men&uuml;=&quot;varsayılan&quot; data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;
   &lt;input id=&quot;menu&quot; name=&quot;menu1&quot; type=&quot;checkbox&quot;&gt;
   &lt;label data-gnl=&quot;1 1p ortada&quot; data-k&ccedil;k=&quot;gizle&quot; for=&quot;menu&quot;&gt;MEN&Uuml;&lt;/label&gt;
   &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
@@ -31,9 +31,9 @@ title: Menüler
 </code></pre>
 
 
-<div data-menü="varsayılan" data-gnl="1 1p" data-kçk="0">
-  <input id="menu" name="menu1" type="checkbox">
-  <label data-gnl="1 1p ortada" data-kçk="gizle" for="menu">MENÜ</label>
+<div data-menü="varsayılan yukarı" data-gnl="1 1p" data-kçk="0">
+  <input id="menuy" name="menu1" type="checkbox">
+  <label data-gnl="1 1p ortada" data-kçk="gizle" for="menuy">MENÜ</label>
   <ul data-gnl="1 1p" data-kçk="0 küçükleri-gizle">
     <li data-gnl="1 1p" data-kçk="0"><a class="etkin" href="">menü #1</a></li>
     <li data-gnl="1 1p" data-kçk="0"><a href="">menü #2</a></li>
@@ -44,9 +44,9 @@ title: Menüler
 </div>
 
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-men&uuml;=&quot;varsayılan&quot; data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;
-  &lt;input id=&quot;menu&quot; name=&quot;menu1&quot; type=&quot;checkbox&quot;&gt;
-  &lt;label data-gnl=&quot;1 1p ortada&quot; data-k&ccedil;k=&quot;gizle&quot; for=&quot;menu&quot;&gt;MEN&Uuml;&lt;/label&gt;
+&lt;div data-men&uuml;=&quot;varsayılan yukarı&quot; data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;
+  &lt;input id=&quot;menuy&quot; name=&quot;menu1&quot; type=&quot;checkbox&quot;&gt;
+  &lt;label data-gnl=&quot;1 1p ortada&quot; data-k&ccedil;k=&quot;gizle&quot; for=&quot;menuy&quot;&gt;MEN&Uuml;&lt;/label&gt;
   &lt;ul data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0 k&uuml;&ccedil;&uuml;kleri-gizle&quot;&gt;
     &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a class=&quot;etkin&quot; href=&quot;&quot;&gt;men&uuml; #1&lt;/a&gt;&lt;/li&gt;
     &lt;li data-gnl=&quot;1 1p&quot; data-k&ccedil;k=&quot;0&quot;&gt;&lt;a href=&quot;&quot;&gt;men&uuml; #2&lt;/a&gt;&lt;/li&gt;
