--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -3,11 +3,10 @@ layout: default
 title: Ekran Örgüsü
 ---
 <div data-gnl="24 24p">
-    <p>Günümüzde ekran ölçeklerinin çeşitliliği bizi ekranlara uyumlu şekilde çalışmalar yapmaya zorlamaktadır. Önyüz çatılarında (frontend framework) bunları genel olarak sağlıklı şekilde kullanabilirsiniz. Bildiğiniz üzere alışılmış ekran ölçeklerini kapsayan terimler genelde 5 6 tanedir. Deveb'de bu birazcık daha fazladır.</p>
-
-    <h2>Ekran Terimleri</h2>
-    <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
-    <p></p>
+    <p>
+      Fiziksel ve sayısal ekran çözünürlüğü ölçeklerinin çeşitliliği günümüzde uyumlu tasarım yapmaya zorlamaktadır. Geleceğin minik ekranları da yavaş yavaş gündelik hayata dahil olmaktadır. Dünyada yeterliği olduğu düşünülen uyumlu ekran ögrüleri 5 6 ölçekle tanımlanır. Deveb önyüz çatısı ise daha kapsamlı olarak hazır hale getirilip kullanıma sunulmuştur.
+      Saat ekranları, telefon ekranları, tablet ekranları, dizüstü ekranları, masaüstü ekranları, tv ekranları ve dev ekranlar olarak gruplandırılmış ekranlar 8 farklı adet uyumlu ekran ölçeği ile kullanılır. Aşağıdaki tabloda uyumlu ekran ölçeklerini inceleyebilirsiniz.
+    </p>
     <table class="tablo">
       <thead>
         <tr>
@@ -93,15 +92,11 @@ title: Ekran Örgüsü
       </tbody>
     </table>
 
-    <h3>Terimler</h3>
-    <p data-metin="ana">Türkçe: Genel - Minik - Ufak - Küçük - Orta - Büyük - Kocaman - Dev</p>
-    <p data-metin="ana">Kullanımı: data-gnl - data-mnk - data-ufk - data-kçk - data-ort - data-byk - data-kcm - data-dev</p>
-    <p data-metin="ana">English: General - Mini - Extra Small - Small - Medium - Large - Extra Large - Huge</p>
-    <p data-metin="ana">Use: data-gnl - data-mn - data-xs - data-sm - data-md - data-lg - data-xl - data-hg</p>
-    <p>Terimlerden anlaşılacağı üzere genel :|: general tüm ekranları kapsar. Diğerleri ise sırasıyla saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranları kapsar.</p>
+    <h3>Ekran Yönergelerini Keşfet</h3>
 
-    <h2>Ekranları Kapsama Yönleri</h2>
-    <p>Deveb ekranları kapsama yönlerine göre kullanım sağlamaktadır. Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar, belirtilen ekran dışında olanlar gibi ihtiyacınıza göre yöntemleri kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yöntemini belirtmeniz gerekmektedir.</p>
+    <p>Deveb ekran örgüsü varsayılan olarak <span data-metin="ana">SIFIR >> SONSUZ</span> yönünde etkilemektedir. Bunun yanında ters yönde ve sadece belirtilmiş ekran grubu için yönergeleri de bulunur. Örneğin bir alanı dizüstü ekranlarına kadar gösterilmesini istemiyorsanız <span data-metin="ana">data-ort="küçükleri-gizle"</span> olarak tanımlamanız yeterlidir. Dizüstü hariç daha küçük ekranlarda gizleme işlemi yapacaktır.
+    Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar, belirtilen ekran dışında olanlar gibi ihtiyacınıza göre yöntemleri kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yöntemini belirtmeniz gerekmektedir.</p>
+
     <h3>Kullanımı</h3>
     <p>Az önce belirttiğimiz gibi bazı özelliklerinde varsayılan yön küçükten büyüğe doğru demiştik. Kap örgüsü mesela buna bir örnektir. Ve sadece bu şekilde kullanılması dışında bir özelliğe sahip değildir. Kap örgüsünden bir alıntı yapalım isterseniz.</p>
     <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe veya 100% genişliğe sahip olacaktır.</p>
