--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -107,8 +107,8 @@ title: Ekran Örgüsü
     <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")</p>
     <h3>küçükleri-? | ?-smaller</h3>
     <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle" (english: data-md="hide-smaller")</p>
-    <h3>? | ?</h3>
-    <p>Belirtildiği ekranları kapsar. Örnek: data-ort="gizle" (english: data-md="hide")</p>
+    <h3>bunu-? | ?-this</h3>
+    <p>Belirtildiği ekranları kapsar. Örnek: data-ort="bunu-gizle" (english: data-md="hide-this")</p>
     <h3>büyükleri-? | ?-bigger</h3>
     <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-bigger")</p>
     <h3>büyükleriyle-? | ?-with-bigger</h3>
