parça düzeni yeniden tanımlama.

--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -7,28 +7,28 @@ title: Deveb'in İnsanları
 <p>Her kişinin Deveb için katkıda bulunduğu alanlar var. Gönüllülük esasına dayalı Deveb İnsanları zaman zaman gözden kaybolabilme özelliklerine sahiptir. Kendilerini unutturmayı başardıkları anda bir anda ortaya çıkarak sizi şaşırtabilirler.</p>
 
 <div class="arala-1 dışkenar-0 metin-orta" data-gnl="1 1p" data-kçk="2 2p" data-ort="3 3p">
-  <div data-gnl="1 ortada" data-kçk="1" data-ort="1">
+  <div data-gnl="1 1p ortada" data-kçk="1 2p" data-ort="1 3p">
 
       <i class="fa fa-flask beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="ilk olumlu">GELİŞTİRİCİLER</h2> <br>
       Deveb'i' geliştirmek üzere bir araya gelerek her şeyi etkileyen işleri yaparlar.
 
   </div>
-  <div data-gnl="1 ortada" data-kçk="1" data-ort="1">
+  <div data-gnl="1 1p ortada" data-kçk="1 2p" data-ort="1 3p">
 
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="ilk olumlu">EĞİTİMCİLER</h2> <br>
       Deveb'i daha iyi kullanabilmek amacıyla örnekler, eğitimler ve diğer şeyleri hazırlarlar.
 
   </div>
-  <div data-gnl="1 ortada" data-kçk="1" data-ort="1">
+  <div data-gnl="1 1p ortada" data-kçk="1 2p" data-ort="1 3p">
 
       <i class="fa fa-gears beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="ilk olumlu">DENETLEYİCİLER</h2> <br>
       Deveb ile her şeyin gerçekten sorunsuz olup olmadığını denetleyerek hataların olup olmadığı keşfini yaparlar.
 
   </div>
-  <div data-gnl="1 ortada" data-kçk="1" data-ort="1">
+  <div data-gnl="1 1p ortada" data-kçk="1 2p" data-ort="1 3p">
 
       <i class="fa fa-handshake-o beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="ilk olumlu">DESTEKÇİLER</h2> <br>
@@ -42,7 +42,7 @@ title: Deveb'in İnsanları
       Deveb hakkında önerilerde bulunmak için görüşlerini yansıtırlar. Aralarında etkileyici görüşler belirten oldu... Senin de olabilir.
 
   </div>
-  <div data-gnl="1 ortada" data-kçk="1" data-ort="1">
+  <div data-gnl="1 1p ortada" data-kçk="1 2p" data-ort="1 3p">
 
       <i class="fa fa-group beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="ilk olumlu">TAKİPÇİLER</h2> <br>
