--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -35,7 +35,7 @@ title: Deveb'in İnsanları
       Deveb'e çeşitli yönlerden destek olurlar. Arkadaşlarıyla bir mekanda otururken Deveb hakkında konuşmaları bile bir destektir.
 
   </div>
-  <div data-gnl="1 ortada" data-kçk="1" data-ort="1">
+  <div data-gnl="1 1p ortada" data-kçk="1 2p" data-ort="1 3p">
 
       <i class="fa fa-eye beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="ilk olumlu">GÖRÜŞÇÜLER</h2> <br>
