--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -4,67 +4,67 @@ title: Tarayıcı Desteği
 ---
 <h1>Tarayıcı Desteği</h1>
 <p>Deveb önyüz iskeletini destekleyen tarayıcılar</p>
-<div data-gnl="24">
-	<div data-gnl="24">
+<div data-gnl="24 24p">
+	<div data-gnl="24 24p">
 		<h2>Masaüstü Desteği</h2>
 		<p>Destekler güncel sürümlere göre belirtilmiştir.</p>
 	</div>
-	<div data-gnl="24" data-deveb="üstte">
+	<div data-gnl="24 24p" data-deveb="üstte">
 		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel">
 					<i class="fa fa-chrome" aria-hidden="true"></i> Chrome
 				</div>
 			</div>
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel" data-metin="olumlu">
 					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
 				</div>
 			</div>
 		</div>
 		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel">
 					<i class="fa fa-firefox" aria-hidden="true"></i> Firefox
 				</div>
 			</div>
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel" data-metin="olumlu">
 					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
 				</div>
 			</div>
 		</div>
 		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel">
 					<i class="fa fa-opera" aria-hidden="true"></i> Opera
 				</div>
 			</div>
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel" data-metin="olumlu">
 					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
 				</div>
 			</div>
 		</div>
 		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel">
 					<i class="fa fa-safari" aria-hidden="true"></i> Safari
 				</div>
 			</div>
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel" data-metin="olumlu">
 					<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
 				</div>
 			</div>
 		</div>
 		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel">
 					<i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
 				</div>
 			</div>
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel metin-belirsiz">
 					<i class="fa fa-times" aria-hidden="true"></i> Belirsiz
 				</div>
@@ -77,12 +77,12 @@ title: Tarayıcı Desteği
 			</div>
 		</div>
 		<div data-gnl="6 6p" data-ufk="1 6p">
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel">
 					<i class="fa fa-edge" aria-hidden="true"></i> Edge
 				</div>
 			</div>
-			<div data-gnl="3" data-ufk="6">
+			<div data-gnl="3 6p" data-ufk="6 6p">
 				<div class="kutu kutu-genel metin-belirsiz">
 					<i class="fa fa-times" aria-hidden="true"></i> Belirsiz
 				</div>
