--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -7,11 +7,12 @@ title: Deveb Kurulumu
 
     <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
     <pre data-gnl="1 1p"><code class="language-html">
-      &lt;link href=&quot;/css/deveb.css&quot; rel=&quot;stylesheet&quot;&gt;
       &lt;script src=&quot;https://code.jquery.com/jquery-2.2.4.min.js&quot;  integrity=&quot;sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=&quot;  crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
       &lt;script type=&quot;text/javascript&quot; src=&quot;/js/deveb.js&quot;&gt;&lt;/script&gt;
+      &lt;link href=&quot;/css/deveb.css&quot; rel=&quot;stylesheet&quot;&gt;
     </code></pre>
     <p><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz</a></p>
+    <p><a href="https://data-deveb.github.io/assets/js/deveb.js">DevebJS'i buradan indirebilirsiniz</a></p>
 
     <h2>İngilizce düşünenler için İngilizce diliyle Deveb</h2>
     <pre data-gnl="1 1p"><code class="language-html">&lt;link href=&quot;/css/deveb.english.css&quot; rel=&quot;stylesheet&quot;&gt;</code></pre>
