--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -16,7 +16,7 @@ title: Deveb Kurulumu
       ayrıştırılmış ve farklı dosyalar haline getirilmiştir. Aynı anda iki dilde satırlarınızı yazmak
       gibi bir çılgınlığa sahipseniz tüm CSS'leri dahil etmeniz gerekecektir.
     </p>
-    <p><a href="https://github.com/data-deveb/data-deveb.github.io/releases/download/s0.1-ilkel/deveb-s0.1-ilkel.zip">Deveb ön uç çerçevesi dosyalarını buradan indirin.</a></p>
+    <p><a href="https://github.com/data-deveb/data-deveb.github.io/releases/download/s0.1-ilkel/deveb-s0.1-ilkel.zip">Deveb ön uç çerçevesi (Deveb Frontend Framework) dosyalarını buradan indirin.</a></p>
 
     <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
     <pre data-gnl="1 1p"><code class="language-html">
